# dtc-de-zoomcamp26

./: README.md
01-docker-terraform/: README.md
01-docker-terraform/docker-sql/: 10-sql-refresher.sql
01-docker-terraform/docker-sql/pipeline/: Dockerfile  Dockerfile.v1  Dockerfile.v2  ingest_data_v1.py  notebook.ipynb  pipeline.py  pyproject.toml  table_download_script.py
01-docker-terraform/docker-sql/terraform/terraform/terrademo/: main.tf  variables.tf
02-workflow-orchestration/: README.md  docker-compose.yml
02-workflow-orchestration/dagster_project/: .env.example  Dockerfile  dagster.yaml  pyproject.toml  requirements.txt
02-workflow-orchestration/dagster_project/dags/: __init__.py  dag_01_hello_world.py  dag_02_python_tasks.py  dag_03_data_pipeline.py  dag_04_postgres_taxi.py  dag_05_gcp_integration.py  dag_06_chat_pipeline.py
02-workflow-orchestration/dagster_project/resources/: __init__.py  gcp.py  postgres.py
02-workflow-orchestration/dagster_project/tests/: conftest.py  test_ops.py  test_schedules.py
